kubernetes/spark-master-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: spark-master
  namespace: spark
spec:
  replicas: 1
  selector:
    matchLabels:
      component: spark-master
  template:
    metadata:
      labels:
        component: spark-master
    spec:
      containers:
        - name: spark-master
          image: spark-hadoop:3.2.1
          command:
           - "/bin/bash"
           - "-c"
           - "--"
          args :
           - './spark-master.sh ; sleep infinity'
          ports:
            - containerPort: 7077
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
